--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employeetracker",
   "version": "1.0.0",
   "description": "A command-line application that allows a user to add and view departments, roles and employees, as well as update employee roles within a company.",
-  "main": "cms.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/AnnaliisaS/employeeTracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
-    "inquirer": "^7.0.6",
+    "inquirer": "^7.1.0",
     "mysql": "^2.18.1"
   }
 }
